fixed words card overflow

--- a/app/assets/stylesheets/components/_word-card.scss
+++ b/app/assets/stylesheets/components/_word-card.scss
@@ -6,6 +6,7 @@
   height: 0px;
   padding: 0;
   transition: height .5s ease !important;
+  overflow: hidden;
 }
 
 .all-words {
